--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
   - "0.8"
 before_script:
   - gem update --system
+  - gem install sass
   - gem install compass
   - npm install -g grunt-cli
 notifications:
