--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,10 @@ before_script:
   - gem install compass
   - npm install -g grunt-cli
 notifications:
-  email: false
+  email:
+    recipients:
+      - travisci@mrhanlon.com
+  webhooks:
+    urls:
+      - http://travis-ci.mrhanlon.com
+    on_failure: never
