--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,14 @@ lib-cov
 *.out
 *.pid
 *.gz
-
+*.iml
 pids
 logs
 results
-
+.idea/
+.DS_Store
 npm-debug.log
 node_modules
-
 .sass-cache
 
 # Cabin-specific ignored files
