--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "mrhanlon.com",
   "version": "0.0.2",
   "description": "Code for mrhanlon.com",
@@ -12,16 +12,16 @@
   },
   "homepage": "https://mrhanlon.com",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "load-grunt-tasks": "~0.1.0",
-    "grunt-pages": "~0.10.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-compass": "~0.2.0",
+    "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-watch": "~0.4.3",
-    "grunt-contrib-connect": "~0.5.0",
+    "grunt-gh-pages": "~0.8.0",
     "grunt-open": "~0.2.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-gh-pages": "~0.8.0"
+    "grunt-pages": "~0.10.0",
+    "load-grunt-tasks": "~0.1.0"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -30,4 +30,3 @@
     "test": "grunt test"
   }
 }
-
