--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,36 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-*.iml
-pids
-logs
-results
-.idea/
-.DS_Store
-npm-debug.log
-node_modules
-.sass-cache
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Cabin-specific ignored files
-dist
-.grunt
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
