--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "mrhanlon.com",
-  "version": "0.0.2",
-  "description": "Code for mrhanlon.com",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mrhanlon/mrhanlon.com.git"
-  },
-  "author": "Matthew R Hanlon <mrhanlon@mrhanlon.com>",
-  "bugs": {
-    "url": "https://github.com/mrhanlon/mrhanlon.com/issues"
-  },
-  "homepage": "https://mrhanlon.com",
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-compass": "~0.2.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-watch": "~0.4.3",
-    "grunt-gh-pages": "~0.8.0",
-    "grunt-open": "~0.2.0",
-    "grunt-pages": "~0.10.0",
-    "load-grunt-tasks": "~0.1.0"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
+  "name": "nextjs-test",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "grunt test"
+    "dev": "next dev",
+    "build": "next build",
+    "export": "next build && next export",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --config .prettierrc 'src/pages/**/*.{ts,tsx}' --write",
+    "deploy": "shipit production deploy"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "next": "12.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
+    "prettier": "^2.7.1",
+    "sass": "^1.55.0",
+    "shipit-cli": "^5.3.0",
+    "shipit-deploy": "^5.3.0",
+    "typescript": "4.8.3"
   }
 }
