--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs-test",
-  "version": "0.1.0",
+  "name": "mrhanlon-nextjs",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,28 +8,27 @@
     "export": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --config .prettierrc 'src/pages/**/*.{ts,tsx}' --write",
+    "format": "prettier --config .prettierrc 'pages/**/*.{ts,tsx}' 'src/**/*.{ts,tsx}' --write",
     "deploy": "shipit production deploy"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^14.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
-    "prettier": "^2.7.1",
-    "sass": "^1.55.0",
+    "@types/node": "20.11.24",
+    "@types/react": "18.2.62",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.1",
+    "prettier": "^2.8.8",
+    "sass": "^1.71.1",
     "shipit-cli": "^5.3.0",
     "shipit-deploy": "^5.3.0",
-    "typescript": "4.8.3"
+    "typescript": "5.3.3"
   }
 }
