--- a/package.json
+++ b/package.json
@@ -1,34 +1,25 @@
 {
-  "name": "mrhanlon-nextjs",
-  "version": "0.2.0",
-  "private": true,
+  "name": "mrhanlon-com-astro",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "export": "next build && next export",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --config .prettierrc 'pages/**/*.{ts,tsx}' 'src/**/*.{ts,tsx}' --write",
-    "deploy": "shipit production deploy"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "next": "^14.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@astrojs/check": "^0.5.9",
+    "@astrojs/ts-plugin": "^1.6.0",
+    "@iconify-json/mdi": "^1.1.64",
+    "astro": "^4.5.4",
+    "astro-icon": "^1.1.0",
+    "sass": "^1.72.0",
+    "typescript": "^5.4.2"
   },
   "devDependencies": {
-    "@types/node": "20.11.24",
-    "@types/react": "18.2.62",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.1",
-    "prettier": "^2.8.8",
-    "sass": "^1.71.1",
     "shipit-cli": "^5.3.0",
-    "shipit-deploy": "^5.3.0",
-    "typescript": "5.3.3"
+    "shipit-deploy": "^5.3.0"
   }
 }
